# odin-protoc-plugin

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  cpp-checks.yml
proto/: example.proto
source/: main.cpp  odin-code-generator.cpp  odin-code-generator.h  pch.h
